Fix warnings in AstBuilder & Literal
Some minor code improvements, mainly use new switch syntax
when each case returns a value for the method.